--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Odin Recipes</h1>
+    <img src="cook.jpg">
+    <br>
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="recipes/pizza.html">Pesto Pizza Recipe</a></li>
