Add CSS Style to pages

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Pesto Pizza</title>
 </head>
 <body>
-    <h1>Pesto Pizza</h1>
+    <h1 class="center">Pesto Pizza</h1>
     <img src="images/pizza.jpeg" height="300px">
     <h2>A great alternative to your regular pizza</h2>
 
