--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
 
-    <h1>Odin Recipes</h1>
-    <img src="cook.jpg">
+    <h1 class="center">Odin Recipes</h1>
+    <img class="center" src="cook.jpg">
     <br>
+    
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="recipes/pizza.html">Pesto Pizza Recipe</a></li>
     <li><a href="recipes/hamburger.html">Air Fryer Hamburger Patties for Two Recipe</a></li>
     </ul>
-
+    
 
 </body>
 
