--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air Fryer Hamburger Patties for Two</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Air Fryer Hamburger Patties for Two</h1>
-    <img src="images/hamburger.jpeg" height="300px">
+    <h1 class="center">Air Fryer Hamburger Patties for Two</h1>
+    <img src="images/hamburger.jpeg">
     <h2>This is a small-scale hamburger recipe, perfect for two people. Serve on toasted hamburger rolls with lettuce, tomato, ranch dressing, and other preferred toppings.</h2>
     <h3>Ingredients:</h3>
     <ul>
