--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>How to Cook Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="center">Lasagna</h1>
     <img src="./images/lasagna.jpeg" height="400px">
     <h2>Brenda's Lasagna</h2>
 
